Fixed the light / dark mode, the app now remembers the light / dark mode state, fixed the dialog x icon, added animations, added light / dark mode to the app part, expanded the width for generate pass button, styled the scrollbar, added back button, and many other bug fixes.

--- a/css/app.css
+++ b/css/app.css
@@ -65,7 +65,7 @@ h4,
 h5,
 h6,
 label {
-  color: var(--text-color);
+  color: #fff;
 }
 
 .main-section {
@@ -81,15 +81,68 @@ label {
   box-shadow: 0 12px 50px rgba(0, 0, 0, 1);
 }
 
-.main-section div {
+.header-items {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.main-section .main-div {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
+.button {
+  display: block;
+  text-align: center;
+  width: 10em;
+  padding: 20px;
+  font-size: 24px;
+  font-weight: 700;
+  font-family: var(--font-family);
+  border-radius: 10px;
+  text-align: center;
+  text-decoration: none;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+}
+
+.btn1 {
+  transition: transform 200ms ease;
+  background-color: var(--gold-color);
+  border-color: var(--light-gold-color);
+  color: #000;
+  justify-self: flex-start;
+  width: 3em;
+  padding: 5px;
+}
+
+.btn1:hover {
+  background-color: var(--secondary-color);
+  border-color: var(--secondary-color);
+  transform: scale(1.05);
+  color: var(--text-color);
+}
+
+#toggle {
+  transition: transform 100ms ease;
+  transform: scale(2);
+  padding: 0.5em;
+  color: white;
+  text-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+  justify-self: flex-end;
+}
+
+#toggle:hover {
+  transform: scale(2.2);
+  cursor: pointer;
+}
+
 .slider-box {
-  gap: 2em;
+  gap: 1em;
 }
 
 .slider-box label {
@@ -155,7 +208,7 @@ label {
   width: 100%;
   height: 2em;
   border-radius: 50px;
-  color: var(--text-color);
+  color: #fff;
   font-family: var(--font-family);
   font-size: var(--heading-four-font-size);
   text-align: center;
@@ -255,4 +308,9 @@ label {
 .close-success-modal,
 .close-error-modal {
   cursor: pointer;
+}
+
+html {
+  scrollbar-color: var(--secondary-color) var(--teritary-color); /** Scroll and track **/
+  scrollbar-width: auto; /* or 'thin' */
 }
