--- a/css/index.css
+++ b/css/index.css
@@ -108,7 +108,7 @@ ol li {
 .button {
   display: block;
   text-align: center;
-  width: 100%;
+  width: 10em;
   padding: 20px;
   font-size: 24px;
   font-weight: 700;
@@ -133,6 +133,7 @@ ol li {
 }
 
 .btn2 {
+  width: 7em;
   transition: transform 100ms ease;
   background-color: var(--darker-color);
   border-color: var(--darker-color);
@@ -150,7 +151,7 @@ ol li {
   transition: transform 100ms ease;
   transform: scale(2);
   color: white;
-  margin-top: 50px;
+  margin-top: 4em;
   text-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -199,6 +200,33 @@ ol li {
   border-color: var(--dim-gold-color);
   transform: scale(1.05);
 }
+
+html {
+  scrollbar-color: var(--secondary-color) var(--teritary-color); /** Scroll and track **/
+  scrollbar-width: auto; /* or 'thin' */
+}
+
+/* ::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+  background: var(--secondary-color);
+}
+::-webkit-scrollbar-track {
+  background-color: var(--ui-scrollbar-track);
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--ui-scrollbar-thumb);
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--ui-scrollbar-thumb-hover);
+}
+::-webkit-scrollbar-button {
+  display: none;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+} */
 
 @media (max-width: 768px) {
   .buttons {
